# react-native-hermes-worker

./: CHANGELOG.md  CONTRIBUTING.md  HermesWorker.podspec  README.md  package-lock.json  package.json  react-native-hermes-worker.code-workspace  tsconfig.json
.github/ISSUE_TEMPLATE/: config.yml
android/: CMakeLists.txt  build.gradle  cpp-adapter.cpp  gradle.properties
android/src/main/: AndroidManifest.xml
android/src/main/java/com/hermesworker/: HermesWorkerModule.kt  HermesWorkerPackage.kt
android/src/newArch/java/com/hermesworker/: HermesWorkerModule.kt
android/src/newarch/java/com/hermesworker/: HermesWorkerModule.kt
android/src/oldArch/java/com/hermesworker/: HermesWorkerModule.kt
cpp/: react-native-hermes-worker.cpp  react-native-hermes-worker.h
example/: app.json  babel.config.js  hermes-workers.json  package.json
example/android/: settings.gradle
example/android/app/: build.gradle
example/android/app/src/main/java/hermesworker/example/: MainActivity.kt  MainApplication.kt
example/android/app/src/main/res/values/: strings.xml
example/ios/: Podfile
example/ios/HermesWorkerExample/: AppDelegate.swift  Info.plist  LaunchScreen.storyboard
example/ios/HermesWorkerExample.xcodeproj/: project.pbxproj
example/ios/HermesWorkerExample.xcodeproj/xcshareddata/xcschemes/: HermesWorkerExample.xcscheme
example/ios/HermesWorkerExample.xcworkspace/: contents.xcworkspacedata
example/ios/assets/: index.worker.bundle.hbc  index.worker.bundle.js
example/src/: App.tsx
example/src/worker/: index.js
ios/: HermesWorker.h  HermesWorker.mm
scripts/: build-worker.js  test-worker.js
src/: NativeHermesWorker.ts  index.tsx  react-native-hermes-worker.d.ts  stringValidator.ts
src/plugins/: index.js
src/plugins/tests/: plugin.test.js
src/tests/: stringValidator.test.ts
